# avarex_ai

./: .gitignore  README.md  downloadmetar.sh  ffigen.yaml  metars.csv  pubspec.yaml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/avarex_ai/: MainActivity.kt
data/: .metars.csv
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart  objectbox-model.json  objectbox.g.dart
lib/native/: llama_bindings.dart
lib/weather/: main.dart  metar.dart  metar_cache.dart  metar_cache.g.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
src/: CMakeLists.txt  llama_api.c  llama_api.h
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
